fixed not available button spacing, dt bold and 101 series in admin

--- a/app/assets/stylesheets/_helpers.sass
+++ b/app/assets/stylesheets/_helpers.sass
@@ -31,6 +31,7 @@ dt
   overflow: hidden
   white-space: nowrap
   text-overflow: ellipsis
+  font-weight: normal
 
 //Brand specific buttons. Base class name is "#{@brand.slugh}-btn-primary"
 
